# template-server-rust

./: .gitignore  README.md  rust_notes.md
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.migrate  docker-compose.yml
server/migrations/: 0001_create_users.sql
server/src/: app.rs  app_state.rs  auth.rs  config.rs  feature.rs  main.rs  openapi.rs
server/src/auth/: dto.rs  errors.rs  extractors.rs  handlers.rs  jwt.rs  middleware.rs  model.rs  password.rs  router.rs  service.rs
server/src/feature/: handlers.rs  router.rs
server/src/middleware/: rate_limit.rs
server/src/repos/: user_repo.rs
server/src/user/: model.rs
